<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="store.dide.cifracar.ui.main.MainFragment"
        android:label="@string/mainTransport"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="store.dide.cifracar.ui.create.CreateFragment"
        android:label="@string/mainCreate"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="store.dide.cifracar.ui.settings.SettingsFragment"
        android:label="@string/mainSettings"
        tools:layout="@layout/fragment_settings" />
</navigation>